--- a/mesa.html
+++ b/mesa.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Lista de Urgências</h1>
-    <p>preciso fazer essas coisas urgentemente antes que esqueça"</p>
+    <p>preciso fazer essas coisas urgentemente antes que esqueça</p>
 
     <ol>
         <li>
